basic/qa/basic_coverage/test_iif_method.bas
@@ -8,11 +8,24 @@
 
 Option Explicit
 
-Function doUnitTest as String
-    ' IIF
-    If ( IIF(True, 10, 12) <> 10 ) Then
-        doUnitTest = "FAIL"
-    Else
-        doUnitTest = "OK"
-    End If
+Function doUnitTest() As String
+    TestUtil.TestInit
+    verify_testIif
+    doUnitTest = TestUtil.GetResult()
 End Function
+
+Sub verify_testIif
+    On Error GoTo errorHandler
+
+    TestUtil.AssertEqual(IIF(True, 10, 12), 10, "IIF(True, 10, 12)")
+
+    ' tdf#149151
+    ' Without the fix, this would fail with "hit error handler - 9: Index out of defined range"
+    TestUtil.Assert(IsArray(Iif(True, Array("A","B"), Array("B","A"))), "IsArray(Iif(True, Array(""A"",""B""), Array(""B"",""A"")))")
+    TestUtil.AssertEqualStrict(Iif(True, Array("A","B"), Array("B","A"))(0), "A", "Iif(True, Array(""A"",""B""), Array(""B"",""A""))(0)")
+    TestUtil.AssertEqualStrict(Iif(True, Array("A","B"), Array("B","A"))(1), "B", "Iif(True, Array(""A"",""B""), Array(""B"",""A""))(1)")
+
+    Exit Sub
+errorHandler:
+    TestUtil.ReportErrorHandler("verify_testIif", Err, Error$, Erl)
+End Sub
